--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
   <title>Bootstrap 5 Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./mystyle.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <!--Logo-->
       <a class="navbar-brand" href="#">
-        <img src="./images/petshop.jpg" alt="Petshop Logo" style="width:60px;" class="rounded">  
+        <img src="../images/petshop.jpg" alt="Petshop Logo" style="width:60px;" class="rounded">  
       </a>
 
       <!-- Itens do Menu-->
@@ -54,21 +54,21 @@
   <!-- Imagens-->
   <div class="carousel-inner" id="inner">
     <div class="carousel-item active">
-      <img src="./images/dog2.jpg" alt="Doguinho" class="d-block w-100 cover">
+      <img src="../images/dog2.jpg" alt="Doguinho" class="d-block w-100 cover">
       <div class="carousel-caption d-none d-md-block">
         <h3 style="color: black;">Conheça o melhor Petshop do Brasil</h5>
         <p style="color: black;">Com mais de 35 unidades espalhadas pelo país.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./images/cat.jpg" alt="Gatin" class="d-block w-100">
+      <img src="../images/cat.jpg" alt="Gatin" class="d-block w-100">
       <div class="carousel-caption d-none d-md-block">
         <h3 style="color: black;">Cuidamos com carinho de quem acompanha você</h5>
         <p style="color: black;">Profissionais treinados e com certificação.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./images/guinea-pig.jpg" alt="Cueio" class="d-block w-100">
+      <img src="../images/guinea-pig.jpg" alt="Cueio" class="d-block w-100">
       <div class="carousel-caption d-none d-md-block">
         <h3 style="color: black;">Suporte e atendimento ao cliente 24 horas</h5>
         <p style="color: black;">Desde tele compras até atendimento veterinário.</p>
