--- a/pages/HomePage/index.html
+++ b/pages/HomePage/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorldPet</title>
     <link rel="shortcut  icon" href="../../pages//petshop.svg">
-    <link rel="stylesheet" href="../globalStyle.css">
+    <link rel="stylesheet" href="../../style/global.css">
     <link rel="stylesheet" href="style.css">
 
 
@@ -21,7 +21,7 @@
         <div class="HomePageHeader">
 
             <div class="logoHeader">
-                <img src="../../images/petshop.svg" class="logo">
+                <img src="../../images/icons/petshop.svg" class="logo">
             </div>
                 
 
