--- a/pages/LadingPage/horarios.html
+++ b/pages/LadingPage/horarios.html
@@ -28,10 +28,10 @@
         <!--Nav Menu-->
         <nav class="navbar navbar-expand-sm navbar-light bg-*">	 
             <!--Logo-->
-            <a class="navbar-brand" href="#">
-            <img src="../../assets/icons/logo.svg" width="60" alt="">
+            <a class="navbar-brand" href="./index.html">
+                <img src="../../assets/icons/logo.svg" width="60" alt="" style="margin-top: -30px;">
+                <h2 style="display: inline-block; margin-top: 3vh; color: black; max-height: min-content;">World Pet</h2>
             </a>
-            <h2 style="margin-top: 5vh; color: black; margin-left: -12px;">World Pet</h2>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
