página de horários

--- a/pages/LadingPage/horarios.html
+++ b/pages/LadingPage/horarios.html
@@ -39,18 +39,65 @@
 
             <ul class="navbar-nav ml-auto" id="menu-font">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="padding-right: 30px;">SERVIÇOS</a>
+                    <a class="nav-link" href="#" style="padding-right: 30px; color: white;">SERVIÇOS</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="#" style="padding-right: 30px;">HORARIOS</a>
+                <a class="nav-link" href="#" style="padding-right: 30px; color: white">HORARIOS</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="#" style="padding-right: 30px;">CONTATO</a>
+                <a class="nav-link" href="#" style="padding-right: 30px; color: white">CONTATO</a>
                 </li>
             </ul>
         </nav>
     </div>
 
+    <!--Second Section-->
+    <div>
+        <h2 style="margin-top: 5vh;">HORÁRIOS E ATENDIMENTOS</h2>
+        <table class="table" style="margin-top: 5vh;">
+            <thead>
+            <tr>
+                <th scope="col">Serviço</th>
+                <th scope="col">Horário</th>
+            </tr>
+            </thead>
+            <tbody class="tab">
+            <tr>
+                <td>Banho/Tosa</td>
+                <td>8:00 - 16:00</td>
+            </tr>
+            <tr>
+                <td>Atendimento Veterinário</td>
+                <td>12:00 - 20:00</td>
+            </tr>
+            <tr>
+                <td>Adestramento de Cães</td>
+                <td>8:00 - 12:00</td>
+            </tr>
+            <tr>
+                <td>Adestramento de Gatos</td>
+                <td>8:00 - 12:00</td>
+            </tr>
+            <tr>
+                <td>Hotel de Cães</td>
+                <td>6:00 - 14:00</td>
+            </tr>
+            <tr>
+                <td>Hotel de Gatos</td>
+                <td>6:00 - 14:00</td>
+            </tr>
+            <tr>
+                <td>Loja Virtual</td>
+                <td>Disponível em todos os horários</td>
+            </tr>
+            <tr>
+                <td>Plantão Emergência Veterinário</td>
+                <td>20:00 - 4:00</td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
 </body>
