--- a/pages/LadingPage/index.html
+++ b/pages/LadingPage/index.html
@@ -41,7 +41,7 @@
 
             <ul class="navbar-nav ml-auto" id="menu-font">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="padding-right: 30px;">SERVIÇOS</a>
+                    <a class="nav-link" href="#servicos" style="padding-right: 30px;">SERVIÇOS</a>
                 </li>
 
                 <li class="nav-item">
@@ -90,9 +90,11 @@
     </div>
     <FadeInSection>
     <!--Third Section-->
-    <div style="height: 90vh;
+    <div class="servicos" id="servicos" 
+    style="height: 90vh;
     background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../assets/images/puppies-bg.jpg);
     background-attachment: fixed; background-size: cover; background-repeat: no-repeat; background-position: 0% 25%; ">
+    
         <div class="d-flex justify-content-center">
             <div class="world-pet-text">
                 <h2 style="color: #ffffff;">NOSSOS SERVIÇOS</h3>
@@ -283,10 +285,10 @@
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
               <p>
-                <a href="#!" class="text-dark">Serviços</a>
+                <a href="#servicos" class="text-dark">Serviços</a>
               </p>
               <p>
-                <a href="#!" class="text-dark">Horários</a>
+                <a href="#horarios" class="text-dark">Horários</a>
               </p>
               <p>
                 <a href="#!" class="text-dark">Contato</a>
