--- a/pages/LadingPage/horarios.html
+++ b/pages/LadingPage/horarios.html
@@ -39,7 +39,7 @@
 
             <ul class="navbar-nav ml-auto" id="menu-font">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="padding-right: 30px; color: white;">SERVIÇOS</a>
+                    <a class="nav-link" href="./index.html#servicos" style="padding-right: 30px; color: white;">SERVIÇOS</a>
                 </li>
 
                 <li class="nav-item">
@@ -56,7 +56,7 @@
     <!--Second Section-->
     <div>
         <h2 style="margin-top: 5vh;">HORÁRIOS E ATENDIMENTOS</h2>
-        <table class="table" style="margin-top: 5vh;">
+        <table class="table table-hover" style="margin-top: 5vh;">
             <thead>
             <tr>
                 <th scope="col">Serviço</th>
@@ -100,4 +100,123 @@
             </tbody>
         </table>
     </div>
+
+        <!-- Footer -->
+        <footer
+        class="text-center text-lg-start text-dark"
+        style="background-color: #ECEFF1; margin-top: 10vh;"
+        >
+  <!-- Section: Social media -->
+  <section
+           class="d-flex justify-content-between p-4 text-white"
+           style="background-color: #21D192"
+           >
+    <!-- Left -->
+    <div class="me-3">
+      <span>Conecte-se a nossas redes sociais:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div class="d-flex flex-row-reverse">
+    
+        <div class="p-1">
+            <a href="" class="text-white me-4">
+                <img src="../../assets/images/icons/whatsapp.png" style="height: 25px; padding-right: 30px;">
+                <i class="fab fa-whats"></i>
+            </a>
+        </div>
+
+        <div class="p-1">
+            <a href="" class="text-white me-4">
+                <img src="../../assets/images/icons/instagram.png" style="height: 25px; padding-right: 12px">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
+
+        <div class="p-1">
+            <a href="" class="text-white me-4">
+                <img src="../../assets/images/icons/facebook.png" style="height: 25px; padding-right: 10px">
+                <i class="fab fa-facebook"></i>
+            </a>
+        </div>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold">World Pet</h6>
+          <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+              />
+          <p>
+                Cuidando com carinho<br>de quem você mais ama!
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold">Links</h6>
+          <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+              />
+          <p>
+            <a href="index.html#servicos" class="text-dark">Serviços</a>
+          </p>
+          <p>
+            <a href="./horarios.html" class="text-dark">Horários</a>
+          </p>
+          <p>
+            <a href="#!" class="text-dark">Contato</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold">Contact</h6>
+          <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+              />
+          <p><i class="fas fa-home mr-3"></i> Av Lorem Ipsum - SP</p>
+          <p><i class="fas fa-envelope mr-3"></i> contato@worldpet.com</p>
+          <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div
+       class="text-center p-3"
+       style="background-color: rgba(0, 0, 0, 0.2)"
+       >
+    © 2020 Copyright:
+    <a class="text-dark" href=""
+       >WorldPet</a
+      >
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+
+
 </body>
