--- a/pages/LadingPage/index.html
+++ b/pages/LadingPage/index.html
@@ -71,9 +71,9 @@
 
                     Contamos com uma equipe especializada com biólogos, veterinários e zootecnistas<br>
                     que realizam o controle de qualidade em todas as nossas unidades.<br>
-                    Acompanhe nossas parcerias com ONGs locais para os pets que não encontraram um lar
-                    <span id="vazio">...</span>
-                    <span id="more"><br>Lorem ipsum dolor sit amet, consectetur adipiscing<br> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+                    Acompanhe nossas parcerias com ONGs locais para os pets que não encontraram um lar.
+                    <span id="vazio"></span>
+                    <span id="more"><br><br>Lorem ipsum dolor sit amet, consectetur adipiscing<br> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
                 </p>
                 
                 <div class="world-pet-text-buttons">
@@ -288,7 +288,7 @@
                 <a href="#servicos" class="text-dark">Serviços</a>
               </p>
               <p>
-                <a href="#horarios" class="text-dark">Horários</a>
+                <a href="./horarios.html" class="text-dark">Horários</a>
               </p>
               <p>
                 <a href="#!" class="text-dark">Contato</a>
@@ -329,20 +329,6 @@
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-    <!-- The Close Button -->
-    <span class="close">&times;</span>
-  
-    <!-- Modal Content (The Image) -->
-    <img class="modal-content" id="img01">
-  
-    <!-- Modal Caption (Image Text) -->
-    <div id="caption"></div>
-  </div>
 
 </body>
 </html>
