--- a/pages/LadingPage/horarios.html
+++ b/pages/LadingPage/horarios.html
@@ -47,7 +47,7 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="#" style="padding-right: 30px; color: white">CONTATO</a>
+                <a class="nav-link" href="./Contato/contato.html" style="padding-right: 30px; color: white">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -179,7 +179,7 @@
             <a href="./horarios.html" class="text-dark">Horários</a>
           </p>
           <p>
-            <a href="#!" class="text-dark">Contato</a>
+            <a href="./Contato/contato.html" class="text-dark">Contato</a>
           </p>
         </div>
         <!-- Grid column -->
