--- a/pages/LadingPage/index.html
+++ b/pages/LadingPage/index.html
@@ -31,7 +31,7 @@
         <!--Nav Menu-->
         <nav class="navbar navbar-expand-sm navbar-light bg-*">	 
             <!--Logo-->
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../../pages/LadingPage/index.html">
                 <img src="../../assets/icons/logo.svg" width="60" alt="" style="margin-top: -30px;">
                 <h2 style="display: inline-block; margin-top: 3vh; color: black; max-height: min-content;">World Pet</h2>
             </a>
@@ -49,7 +49,7 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="#" style="padding-right: 30px;">CONTATO</a>
+                <a class="nav-link" href="./Contato/contato.html" style="padding-right: 30px;">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -291,7 +291,7 @@
                 <a href="./horarios.html" class="text-dark">Horários</a>
               </p>
               <p>
-                <a href="#!" class="text-dark">Contato</a>
+                <a href="./Contato/contato.html" class="text-dark">Contato</a>
               </p>
             </div>
             <!-- Grid column -->
